# pySigma-backend-sentinelone

./: LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: release.yml  test.yml
sigma/backends/sentinelone/: __init__.py  sentinelone.py  sentinelone_pq.py
sigma/backends/sentinelonedeepvisibility/: __init__.py  sentinelonedeepvisibility.py
sigma/pipelines/sentinelone/: __init__.py  sentinelone.py  sentinelone_pq.py
sigma/pipelines/sentinelonedeepvisibility/: __init__.py  sentinelonedeepvisibility.py
tests/: test_backend_sentinelone.py  test_backend_sentinelone_pq.py  test_backend_sentinelonedeepvisibility.py  test_pipelines_sentinelone.py  test_pipelines_sentinelone_pq.py  test_pipelines_sentinelonedeepvisibility.py
workflows/: test.yml
